# tia

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
.cache/clangd/index/: arena.c.73B930504EC949D5.idx  arena.h.2E03CF89C87FC420.idx  ast.h.76EEF9CF3F7FB69B.idx  basic.c.D57601A8D97898D5.idx  basic.h.8585161DAF6A4C27.idx  expression.h.C36558A119D457BF.idx  file.c.2839826F33377B3F.idx  file.h.057821BB56435DF0.idx  folder.c.4F0EE660650CD11C.idx  folder.h.8C9030D7E0B52782.idx  function.h.7F2D2EA2BB660959.idx  lists.c.27CBAD81C2457700.idx  lists.h.1BEDF3968031C583.idx  logging.h.00A99C78AE76943B.idx  main.c.85CF2248D56ECFE7.idx  main.c.F548B1D6CD259AC9.idx  scope.h.573B9355130FABA2.idx  scratch.c.04A373B97B888BD9.idx  statement.h.4600C83B04FDECF0.idx  tests.c.BC7FD07F5CA0D47D.idx  tia.c.E1B42CFD25D16AB1.idx  tia.c.F85C9F5B0418E89A.idx  tia.h.0BE82DDAAC1DCD14.idx  token.c.0A322AF878D36D08.idx  token.h.A6E752C7F151AA24.idx  type.h.C605E9AE686ED0F6.idx
scratch/: CMakeLists.txt  main.tia
scratch/src/: scratch.c
std_lib/: heap.tia
tests/: CMakeLists.txt
tests/src/: tests.c
tia/: CMakeLists.txt
tia/include/: tia.h
tia/include/tia/: arena.h  ast.h  basic.h  expression.h  file.h  folder.h  function.h  lists.h  llvm.h  logging.h  scope.h  statement.h  token.h  type.h
tia/src/: arena.c  ast.c  basic.c  expression.c  file.c  folder.c  function.c  lists.c  logging.c  scope.c  statement.c  tia.c  token.c  type.c
